# auto_task_create_cvat_module

./: .env  .gitignore  docker-compose.yml  readme.md
auto_task_create_cvat_module/: dockerfile  pyproject.toml
auto_task_create_cvat_module/app/: main.py
auto_task_create_cvat_module/app/config/: environment.py  logger.py
auto_task_create_cvat_module/app/dao/: mariadbconnection.py  redis_connection.py
auto_task_create_cvat_module/app/inference/: model_manager.py
auto_task_create_cvat_module/app/jupyter_notebook_tests/: cvat_functions.ipynb
auto_task_create_cvat_module/app/utils/: crop_image.py  cvat_requests.py  helper.py  image_cancatenator.py  image_handler.py  image_processing.py  metadata_image.py  metrics_prometheus.py  width_measurement.py
