[tool.poetry]
name = "auto-task-create-cvat-module"
version = "0.1.0"
description = ""
authors = ["Igor Martins <igor.santos@aperam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
redis = "^5.1.1"
prometheus-client = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
